# GenStrat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: gen_strat.yaml
docker/: Dockerfile
notebooks/: check_traj.ipynb
script/: syn_traj.sh
src/: all_main.py  rolling_main.py  strategy.py
src/base/: base_strategy.py
src/utils/: data_utils.py
trade_log/synthetic_BB (20, 2, 0)/: BB (20, 2, 0)_-0.05_0.1.pkl
trade_log/synthetic_RSI (14)/: RSI (14)_-0.03_0.1.pkl  RSI (14)_-0.05_0.1.pkl  RSI (14)_-0.05_1.0.pkl  RSI (14)_-0.15_0.15.pkl
trade_log/synthetic_SMA (8, 21)/: SMA (8, 21)_-0.1_0.15.pkl
